css fixes so might look better on Safari

--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -60,7 +60,7 @@ h1 {
 h2 {
 	margin-top: 20px;
 	margin-bottom: 10px;
-	font-family: 'Roboto-Condensed';
+	font-family: 'Roboto-Condensed', Helvetica;
 	font-weight: 500;
 	font-size: 26px;
 	color: black;
@@ -73,7 +73,7 @@ h3 {
 	margin-top: 18px;
 	margin-bottom: 8px;
 	color: #414042;
-	font-family: 'Roboto-Condensed';
+	font-family: 'Roboto-Condensed', Helvetica;
 	font-size: 22px;
 }
 
@@ -81,7 +81,7 @@ h4 {
 	margin-top: 18px;
 	margin-bottom: 8px;
 	color: #58595b;
-	font-family: 'Roboto-Condensed';
+	font-family: 'Roboto-Condensed', Helvetica;
 	font-size: 22px;
 }
 
